Fixed css issues; need to cleanly display cards
Currently the L/R buttons overlap the cards; need to make create a small grid for the cards to display nicely

--- a/app/packs/components/PackContents/components/MultiCardShow/MultiCardShow.scss
+++ b/app/packs/components/PackContents/components/MultiCardShow/MultiCardShow.scss
@@ -1,5 +1,5 @@
 .multi-packs {
-  border: 1px solid white;
+  // border: 1px solid white;
   display: flex;
   flex-direction: row !important; 
 
