--- a/app/packs/components/UserPacks/userPacks.scss
+++ b/app/packs/components/UserPacks/userPacks.scss
@@ -1,7 +1,7 @@
 .user-packs {
     position: relative;
     overflow: hidden;
-    border: 1px solid white;
+    // border: 1px solid white;
 
     .button {
         margin-left: 15px;
